Fixed Css gaps

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,9 @@
 html {
   scroll-behavior: smooth;
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
